--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -25,16 +25,16 @@ import '@fontsource-variable/inter';
     --aw-font-serif: 'InterVariable';
     --aw-font-heading: 'InterVariable';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
-    --aw-color-accent: rgb(109 40 217);
+    --aw-color-primary: rgb(255, 105, 180); /* Pink */
+    --aw-color-secondary: rgb(81, 31, 217);
+    --aw-color-accent: rgb(255, 182, 193); /* Light Pink */
 
-    --aw-color-text-heading: rgb(0 0 0);
-    --aw-color-text-default: rgb(16 16 16);
+    --aw-color-text-heading: rgb(0, 0, 0);
+    --aw-color-text-default: rgb(16, 16, 16);
     --aw-color-text-muted: rgb(16 16 16 / 66%);
-    --aw-color-bg-page: rgb(255 255 255);
+    --aw-color-bg-page: rgb(255, 255, 255);
 
-    --aw-color-bg-page-dark: rgb(3 6 32);
+    --aw-color-bg-page-dark: rgb(3, 6, 32);
 
     ::selection {
       background-color: lavender;
@@ -46,14 +46,14 @@ import '@fontsource-variable/inter';
     --aw-font-serif: 'InterVariable';
     --aw-font-heading: 'InterVariable';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
-    --aw-color-accent: rgb(109 40 217);
+    --aw-color-primary: rgb(255, 105, 180); 
+    --aw-color-secondary: rgb(81, 31, 217); 
+    --aw-color-accent: rgb(255, 182, 193); 
 
     --aw-color-text-heading: rgb(247, 248, 248);
-    --aw-color-text-default: rgb(229 236 246);
+    --aw-color-text-default: rgb(229, 236, 246);
     --aw-color-text-muted: rgb(229 236 246 / 66%);
-    --aw-color-bg-page: rgb(3 6 32);
+    --aw-color-bg-page: rgb(3, 6, 32);
 
     ::selection {
       background-color: black;
