--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -24,7 +24,7 @@ const {
 } = Astro.props;
 ---
 
-<section class="relative md:-mt-[76px] not-prose" {...id ? { id } : {}}>
+<section class="relative md:-mt-[76px] not-prose bg-cover bg-blob-white dark:bg-blob-dark" {...id ? { id } : {}}>
   <div class="absolute inset-0 pointer-events-none" aria-hidden="true"></div>
   <div class="relative max-w-7xl mx-auto px-4 sm:px-6">
     <div class="pt-0 md:pt-[76px] pointer-events-none"></div>
@@ -33,7 +33,7 @@ const {
         {
           tagline && (
             <p
-              class="text-base text-secondary dark:text-blue-200 font-bold tracking-wide uppercase"
+              class="text-base bg-gradient-to-r from-purple-500 to-blue-500 font-bold tracking-wide uppercase text-transparent bg-clip-text inline-block"
               set:html={tagline}
             />
           )
