feat(telegram): added tg

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ const certificates = {
       actions={[
         {
           text: 'Свяжись со мной!',
-          href: 'https://wa.me/79140720503',
+          href: 'https://t.me/annettgr',
         },
       ]}
       isSticky
@@ -69,7 +69,7 @@ const certificates = {
     id="hero"
     title="Анна Гуркович"
     tagline="Онлайн репетитор английского языка"
-    actions={[{ variant: 'primary', text: 'Свяжись со мной!', href: getPermalink('https://wa.me/79140720503') }]}
+    actions={[{ variant: 'primary', text: 'Свяжись со мной!', href: getPermalink('https://t.me/annettgr') }]}
   >
     <Fragment slot="subtitle">
       <span class="text-pretty">
@@ -98,6 +98,14 @@ const certificates = {
           target: '_blank',
           text: 'WhatsApp',
           href: getPermalink('https://wa.me/79140720503'),
+        },
+      },
+      {
+        icon: 'tabler:brand-telegram',
+        callToAction: {
+          target: '_blank',
+          text: 'Telegram',
+          href: getPermalink('https://t.me/annettgr'),
         },
       },
     ]}
@@ -509,7 +517,7 @@ const certificates = {
       {
         variant: 'primary',
         text: 'Свяжись со мной!',
-        href: 'https://wa.me/79140720503',
+        href: 'https://t.me/annettgr',
       },
     ]}
   />
