fix(config): misc fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -190,7 +190,7 @@ const certificates = {
       },
       {
         title: 'Интерактивные уроки',
-        description: 'Уроки интерактивный и увлекательны,на которых мы обсуждаем самые актуальные темы.',
+        description: 'Интерактивные и увлекательные уроки,на которых мы обсуждаем самые актуальные темы.',
       },
       {
         title: 'Фокус на коммуникации',
