--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -145,7 +145,7 @@ const certificates = {
     title="Мой проффесиональный путь"
     items={[
       {
-        title: `Translation and Interpreting <br />Universidad Autónoma, Барселона<span class="font-normal"></span> <br /> <span class="text-sm font-normal">2022 - 2023</span>`,
+        title: `Translation and Interpreting <br /> <span class="font-normal">Universidad Autónoma, Барселона</span> <br /> <span class="text-sm font-normal">2022 - 2023</span>`,
         icon: 'tabler:school',
       },
       {
@@ -190,7 +190,7 @@ const certificates = {
       },
       {
         title: 'Интерактивные уроки',
-        description: 'Интерактивные и увлекательные уроки,на которых мы обсуждаем самые актуальные темы.',
+        description: 'Интерактивные и увлекательные уроки, на которых мы обсуждаем самые актуальные темы.',
       },
       {
         title: 'Фокус на коммуникации',
