--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -178,7 +178,7 @@ const certificates = {
     items={[
       {
         title: 'Индивидуальный подход',
-        description: 'Каждый урок адаптируется под индивидуальные потребности и стиль обучения студента.',
+        description: 'Каждый урок адаптируется под индивидуальные потребности, цели и инетерсы студента.',
       },
       {
         title: 'Живой Английский',
