--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,14 +171,14 @@ const certificates = {
   <!-- Features3 Widget ************** -->
 
   <Features3
-    title="Преймущевства моих занятий"
+    title="Преимущевства моих занятий"
     subtitle="Почему тебе будет комфортно."
     columns={3}
     defaultIcon="tabler:point-filled"
     items={[
       {
         title: 'Индивидуальный подход',
-        description: 'Каждый урок адаптируется под индивидуальные потребности, цели и инетерсы студента.',
+        description: 'Каждый урок адаптируется под индивидуальные потребности, цели и интересы студента.',
       },
       {
         title: 'Живой Английский',
@@ -206,7 +206,7 @@ const certificates = {
       },
       {
         title: 'Постоянная обратная связь',
-        description: 'Всегда на связи, даже в не рабочее время, помогу и проконсультирую с Английским.',
+        description: 'Всегда на связи, даже в нерабочее время, помогу и проконсультирую с английским.',
       },
       {
         title: 'Путешествия и культура',
@@ -219,7 +219,7 @@ const certificates = {
   <Content
     id="certificates"
     title="Сертификаты и дипломы"
-    subtitle="Свидетельство о прохождении курсов и обучения."
+    subtitle="Свидетельства о прохождении курсов и обучения."
     isReversed
     items={[
       {
@@ -292,7 +292,7 @@ const certificates = {
     items={[
       {
         title: '2018 г.',
-        description: `Победитель Олимпиады школьников по Английскому языку.`,
+        description: `Победитель Олимпиады школьников по английскому языку.`,
       },
 
     ]}
@@ -320,7 +320,7 @@ const certificates = {
     items={[
       {
         title: '2018 г.',
-        description: `Призер Олимпиады школьников по Английскому языку.`,
+        description: `Призер Олимпиады школьников по английскому языку.`,
       },
 
     ]}
@@ -410,7 +410,7 @@ const certificates = {
     items={[
       {
         title: '2018 г.',
-        description: `Призер отборочного этапа Алимпиады школьников РАНХиГС по предмету английский язык.`,
+        description: `Призер отборочного этапа олимпиады школьников РАНХиГС по предмету английский язык.`,
       },
     ]}
     image={{
