--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -206,7 +206,7 @@ const certificates = {
       },
       {
         title: 'Подготовка к экзаменам',
-        description: 'Представляю экспертную подготовку к экзаменам на знание английского языка, таким как IELTS и TOEFL.',
+        description: 'Представляю экспертную подготовку к экзаменам на знание английского языка, таким как TOEFL.',
       },
       {
         title: 'Комфорт',
@@ -239,8 +239,8 @@ const certificates = {
         description: 'Английский для работы, переговоров, собеседований. Занятия с упором на лексику в сфере маркетинга, менеджмента, программирования. Также возможна подготовка к собеседованиям/переговорам.',
       },
       {
-        title: 'IELTS preparation (60-90 минут)',
-        description: 'Занятия по подготовке к международному экзамену IELTS. Расскажу про все tips and tricks как сдать на высший балл!',
+        title: 'Exam preparation (60-90 минут)',
+        description: 'Занятия по подготовке к международным экзаменам. Расскажу про все tips and tricks как сдать на высший балл!',
       },
       {
         title: '«Бережная» подготовка к ОГЭ (60 минут)',
